--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "test": "test"
   },
   "scripts": {
+    "webpack": "webpack --mode=development --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
