--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.5",
+    "bootstrap": "^5.1.3",
     "css-loader": "^6.7.1",
     "jquery": "^3.6.0",
     "jquery-ujs": "^1.2.3",
