--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@ yarn-debug.log*
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore .DS_Store
+.DS_Store
+*/.DS_Store
