--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-fuzzy": "^1.3.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.2.0",
